[FIX] tentatively remove white-space nowrap on td.item and td.label to try to fix installation wizards text

--- a/addons/openerp/static/css/style.css
+++ b/addons/openerp/static/css/style.css
@@ -509,7 +509,6 @@ table.o2m_box div.pagerbar-header strong {
 td.label,
 td.item {
     padding: 4px;
-    white-space: nowrap;
 }
 
 td.label {
